--- a/README
+++ b/README
@@ -1,1 +1,6 @@
+# Panda-DQN
 
+* Dentro alla folder soloNeurale/ si trova una versione del progetto in cui è stata utilizzata solamente la rete neurale per raggiungere la zona verde evitando l'ostacolo, raggiungendo poi a distanza millimetrica il target con un controllore a basso livello
+* Dentro alla folder conBassoLivello/ si trova una versione del progetto in cui è stata utilizzato in aggiunta alla rete neurale un sistema di previsione delle collisioni
+
+In entrambe le cartelle, abbiamo i file relativi al train e il controllore pronto allo stato attuale delle cose, più un file che contiene le statistiche su un test di 10k operazioni.
